--- a/src/assets/font.css
+++ b/src/assets/font.css
@@ -2,33 +2,33 @@
     font-family: 'TTTravels-Light';
     font-style: normal;
     font-weight: 300;
-    src: url('./fonts/TTTravels-Light.ttf') format('ttf');
+    src: url('./fonts/TTTravels-Light.ttf');
 }
 
 @font-face {
     font-family: 'TTTravels-Regular';
     font-style: normal;
     font-weight: 400;
-    src: url('./fonts/TTTravels-Regular.ttf') format('ttf');
+    src: url('./fonts/TTTravels-Regular.ttf');
 }
 
 @font-face {
     font-family: 'TTTravels-Medium';
     font-style: normal;
     font-weight: 500;
-    src: url('./fonts/TTTravels-Medium.ttf') format('ttf');
+    src: url('./fonts/TTTravels-Medium.ttf');
 }
 
 @font-face {
     font-family: 'TTTravels-DemiBold';
     font-style: normal;
     font-weight: 600;
-    src: url('./fonts/TTTravels-DemiBold.ttf') format('ttf');
+    src: url('./fonts/TTTravels-DemiBold.ttf');
 }
 
 @font-face {
     font-family: 'TTTravels-Bold';
     font-style: normal;
     font-weight: 700;
-    src: url('./fonts/TTTravels-Bold.ttf') format('ttf');
+    src: url('./fonts/TTTravels-Bold.ttf');
 }
